--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,9 @@ blessed==1.20.0
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
-click==8.1.6
+click @ file:///D:/bld/click_1689752086644/work
 cmaes==0.10.0
-colorama==0.4.6
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
 coloredlogs==15.0.1
 colorlog==6.7.0
 contourpy==1.1.0
@@ -30,9 +30,12 @@ cycler==0.11.0
 dateutils==0.6.12
 decorator==5.1.1
 deepdiff==6.3.1
+dlib @ file:///D:/bld/dlib_1685975913670/work
 docopt==0.6.2
 einops==0.6.1
 exceptiongroup==1.1.2
+face-recognition @ file:///home/conda/feedstock_root/build_artifacts/face_recognition_1619808233029/work
+face-recognition-models @ file:///home/conda/feedstock_root/build_artifacts/face_recognition_models_1595707436534/work
 fastapi==0.101.0
 faster-whisper==0.7.1
 ffmpeg-python==0.2.0
@@ -78,11 +81,12 @@ numba==0.57.1
 numpy==1.24.4
 omegaconf==2.3.0
 onnxruntime==1.15.1
+opencv-python==4.8.0
 optuna==3.3.0
 ordered-set==4.1.0
 packaging==23.1
 pandas==2.0.3
-Pillow==10.0.0
+Pillow @ file:///D:/bld/pillow_1688255942199/work
 pooch==1.6.0
 primePy==1.3
 protobuf==4.24.0
