--- a/requirements.txt
+++ b/requirements.txt
@@ -1,121 +1,5 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-alembic==1.11.2
-annotated-types==0.5.0
-ansicon==1.89.0
-antlr4-python3-runtime==4.9.3
-anyio==3.7.1
-appdirs==1.4.4
-arrow==1.2.3
-asteroid-filterbanks==0.4.0
-async-timeout==4.0.3
-attrs==23.1.0
-audioread==3.0.0
-av==10.0.0
-backoff==2.2.1
-beautifulsoup4==4.12.2
-blessed==1.20.0
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.6
-cmaes==0.10.0
-colorama==0.4.6
-coloredlogs==15.0.1
-colorlog==6.7.0
-contourpy==1.1.0
-croniter==1.4.1
-ctranslate2==3.18.0
-cycler==0.11.0
-dateutils==0.6.12
-decorator==5.1.1
-deepdiff==6.3.1
-docopt==0.6.2
-einops==0.6.1
-exceptiongroup==1.1.2
-fastapi==0.101.0
-faster-whisper==0.7.1
-ffmpeg-python==0.2.0
-filelock @ file:///C:/b/abs_c7yrhs9uz2/croot/filelock_1672387617533/work
-flatbuffers==23.5.26
-fonttools==4.42.0
-frozenlist==1.4.0
-fsspec==2023.6.0
-future==0.18.3
-greenlet==2.0.2
-h11==0.14.0
-huggingface-hub==0.16.4
-humanfriendly==10.0
-HyperPyYAML==1.2.1
-idna==3.4
-inquirer==3.1.3
-itsdangerous==2.1.2
-Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
-jinxed==1.2.0
-joblib==1.3.2
-julius==0.2.7
-kiwisolver==1.4.4
-lazy_loader==0.3
-librosa==0.10.0.post2
-lightning==2.0.6
-lightning-cloud==0.5.37
-lightning-utilities==0.9.0
-llvmlite==0.40.1
-Mako==1.2.4
-markdown-it-py==3.0.0
-MarkupSafe @ file:///C:/ci/markupsafe_1654508036328/work
-matplotlib==3.7.2
-mdurl==0.1.2
-mkl-fft==1.3.6
-mkl-random @ file:///C:/Users/dev-admin/mkl/mkl_random_1682977971003/work
-mkl-service==2.4.0
-mpmath @ file:///C:/b/abs_7833jrbiox/croot/mpmath_1690848321154/work
-msgpack==1.0.5
-multidict==6.0.4
-networkx @ file:///C:/b/abs_e6gi1go5op/croot/networkx_1690562046966/work
-nltk==3.8.1
-numba==0.57.1
-numpy==1.24.4
-omegaconf==2.3.0
-onnxruntime==1.15.1
-optuna==3.3.0
-ordered-set==4.1.0
-packaging==23.1
-pandas==2.0.3
-Pillow==10.0.0
-pooch==1.6.0
-primePy==1.3
-protobuf==4.24.0
-psutil==5.9.5
-pyannote.audio @ git+https://github.com/pyannote/pyannote-audio@11b56a137a578db9335efc00298f6ec1932e6317
-pyannote.core==5.0.0
-pyannote.database==5.0.1
-pyannote.metrics==3.2.1
-pyannote.pipeline==2.3
-pycparser==2.21
-pydantic==2.0.3
-pydantic_core==2.3.0
-pydub @ file:///home/conda/feedstock_root/build_artifacts/pydub_1615612442567/work
-Pygments==2.16.1
-PyJWT==2.8.0
-pyparsing==3.0.9
-pyreadline3==3.4.1
-python-dateutil==2.8.2
-python-editor==1.0.4
-python-multipart==0.0.6
-pytorch-lightning==2.0.6
-pytorch-metric-learning==2.3.0
-pytz==2023.3
-PyYAML==6.0.1
-readchar==4.0.5
-regex==2023.8.8
-requests==2.31.0
-rich==13.5.2
-ruamel.yaml==0.17.28
-ruamel.yaml.clib==0.2.7
-safetensors==0.3.2
 scikit-learn==1.3.0
-scipy==1.11.1
+scipy
 semver==3.0.1
 sentencepiece==0.1.99
 shellingham==1.5.0.post1
@@ -129,7 +13,7 @@ speechbrain==0.5.15
 SQLAlchemy==2.0.19
 starlette==0.27.0
 starsessions==1.3.0
-sympy @ file:///C:/b/abs_95fbf1z7n6/croot/sympy_1668202411612/work
+sympy==1.12
 tabulate==0.9.0
 tensorboardX==2.6.2
 threadpoolctl==3.2.0
@@ -143,12 +27,11 @@ tqdm==4.66.1
 traitlets==5.9.0
 transformers==4.31.0
 typer==0.9.0
-typing_extensions @ file:///C:/b/abs_213vg2cd1l/croot/typing_extensions_1690297804941/work
+typing-extensions
 tzdata==2023.3
 urllib3==2.0.4
 uvicorn==0.23.2
 wcwidth==0.2.6
 websocket-client==1.6.1
 websockets==11.0.3
-whisperx @ git+https://github.com/m-bain/whisperx.git@66da4b3eb715bad14d0271e25ce9b373d3541114
 yarl==1.9.2
